# frontier_exploration

./: CMakeLists.txt  package.xml
include/: abstract_logger.hpp  information_gain.hpp  polygon_helpers.hpp  ros_interface.hpp  ros_logger.hpp  wfd_processor.hpp  wfd_types.hpp
launch/: frontier_exploration.launch.py  wfd_explorer.launch.py
params/: UTM_Mule_Recon_2026.txt  frontier_exploration.yaml  frontier_exploration_helhest.yaml  frontier_exploration_husky.yaml  wfd_explorer.yaml
src/: main.cpp  ros_interface.cpp  wfd_processor.cpp
srv/: LoadPolygonFromFile.srv  SetPolygon.srv  SetPose.srv
