<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wfd_explorer</name>
  <version>0.1.0</version>
  <description>
    Autonomous exploration using Wavefront Frontier Detection (WFD).
    Subscribes to a nav_msgs/OccupancyGrid, detects frontier boundaries,
    selects goal points balancing information gain vs. travel distance,
    and commands Nav2 via the NavigateToPose action.

    Note: Package has been created with the help of ClaudeAI.
  </description>
  <maintainer email="herolada@fel.cvut.cz">Adam Herold</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS deps -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- fmt for structured logging -->
  <depend>libfmt-dev</depend>

  <!-- Launch / test -->
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
